ReviewsContainer: issue with button and block's sizes fixed + ReviewCards: gap added and card's width removed

--- a/src/components/new/slices/reviews_slice/reviews_container/reviews/reviews_text_block_container/index.scss
+++ b/src/components/new/slices/reviews_slice/reviews_container/reviews/reviews_text_block_container/index.scss
@@ -1,12 +1,12 @@
 @import '@/styles/new/variables.module.scss';
 
-#reviews_text_block_container {
+/* #reviews_text_block_container {
   width: 100%;
   height: 40%;
 
   #reviews_text_block {
     width: 100%;
-    /* height: 100%; */
+    // height: 100%;
     display: flex;
     justify-content: center;
   }
@@ -37,4 +37,4 @@
     #reviews_text_block {
     }
   }
-}
+} */
