--- a/src/components/new/slices/reviews_slice_new/reviews_container/index.scss
+++ b/src/components/new/slices/reviews_slice_new/reviews_container/index.scss
@@ -6,7 +6,7 @@
   flex-direction: row;
 
   #reviews_container {
-    width: 100%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -14,7 +14,7 @@
 }
 
 #reviews_container {
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
 }
