--- a/src/components/new/slices/reviews_slice_new/reviews_container/review_cards/index.scss
+++ b/src/components/new/slices/reviews_slice_new/reviews_container/review_cards/index.scss
@@ -4,6 +4,8 @@
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: 27%;
+  overflow-x: auto;
+  gap: $gap_medium;
 }
 
 @media screen and (max-width: $breakpoint_XXS) {
