--- a/src/components/new/slices/reviews_slice_new/reviews_container/reviews_text_block_container/index.scss
+++ b/src/components/new/slices/reviews_slice_new/reviews_container/reviews_text_block_container/index.scss
@@ -1,1 +1,20 @@
 @import '@/styles/new/variables.module.scss';
+
+#reviews_text_block_container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+
+  #reviews_text_block {
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: $breakpoint_M) {
+  #reviews_text_block_container {
+  
+    #reviews_text_block {
+      width: 100%;
+    }
+  }
+}
